# e-vote

./: CMakeLists.txt  README.md  client.cpp  enctest.cpp  evote-py.cpp  peer.cpp  refs.txt  setup.sh
blockchain/: blockchain.cpp  blockchain.hpp  blockchain_dht.cpp  litechain.cpp  litechain.h  litechain_dht.cpp  merkle.cpp  merkle.hpp
docker/: Dockerfile
lib/: libc.so.6  libdl.so.2  libgcc_s.so.1  libgmp.so.10  libgnutls.so.30  libhogweed.so.4  libidn2.so.0  libm.so.6  libnettle.so.6  libopendht.so.0  libp11-kit.so.0  libreadline.so.7  libtasn1.so.6  libunistring.so.2
logger/: log.hpp
network/: btcp.hpp  kdht.cpp  kdht.hpp
security/: ecc.cpp  ecc.hpp  ecc_encode.hpp  identity.cpp  identity.hpp
tests/: merkt.cpp
utils/: exceptions.hpp  utils.cpp  utils.hpp
